--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+  "npm": ">=10.9.2",
+  "node": ">=23.11.0"
+},
   "dependencies": {
     "mineflayer": "^4.25.0",
     "mineflayer-gui": "^4.0.2",
